--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,18 @@
       <label for="link">Link:</label>
       <input type="url" id="link" name="link" required>
 
-      <label for="image">Image:</label>
+      <label for="image">Upload Image File:</label>
       <input type="file" id="image" name="image" accept="image/*" >
+
+      <label for="image">Upload Image URL:</label>
+      <input type="url" id="image_url" name="image_url" >
 
       <button type="submit">Add Widget</button>
     </form>
 
   </div>
 
-  <button id="deleteModeButton">Enter</button>
+  <button id="deleteModeButton">Enter Delete Mode</button>
 
   <div class="widget-container" id="widgetContainer"></div>
 
